--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root{
-    --primary-color: #1d5888;
-    --secondary-color: #ff993b;
+    --primary-color: #000000;
+    --secondary-color: #f33928;
     --dark-color: #292929;
     --white-color: #fdfdfd;
 }
